infrastructure/gatekeeper/tests/privileged-containers/fail.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: my-app
spec:
  containers:
    - name: app
      image: nginx:1.27
      securityContext:
        privileged: true
